--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "sass": "^1.64.2",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
